--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -18,18 +18,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# stonehaven tools\n",
+    "# stonehaven_tools\n",
     "\n",
     "> API details."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-02-16T14:52:27.712257Z",
-     "start_time": "2021-02-16T14:52:27.690988Z"
+     "end_time": "2021-02-16T15:00:22.398886Z",
+     "start_time": "2021-02-16T15:00:20.388092Z"
     }
    },
    "outputs": [],
@@ -40,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-02-16T14:52:27.866763Z",
-     "start_time": "2021-02-16T14:52:27.845522Z"
+     "end_time": "2021-02-16T15:00:24.955368Z",
+     "start_time": "2021-02-16T15:00:24.934710Z"
     }
    },
    "outputs": [],
@@ -57,11 +57,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-02-16T14:52:28.052990Z",
-     "start_time": "2021-02-16T14:52:28.031187Z"
+     "end_time": "2021-02-16T15:00:25.560450Z",
+     "start_time": "2021-02-16T15:00:25.537491Z"
     }
    },
    "outputs": [
@@ -71,7 +71,7 @@
        "'Hello Sylvain!'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
