changed the file names

--- a/index.ipynb
+++ b/index.ipynb
@@ -2,36 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-02-16T15:00:11.085265Z",
-     "start_time": "2021-02-16T15:00:11.050920Z"
+     "end_time": "2021-02-16T15:41:00.608223Z",
+     "start_time": "2021-02-16T15:41:00.589109Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'stonehaven_tools'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-7af94572d11e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#hide\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mstonehaven_tools\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcore\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'stonehaven_tools'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#hide\n",
-    "from stonehaven_tools.core import *"
+    "from stonehaventools.core import *"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stonehaven Tools\n",
+    "# stonehaventools\n",
     "\n",
     "> This library contains a collection of tools built by stonehaven"
    ]
@@ -54,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pip install stonehaven_tools`"
+    "`pip install stonehaventools`"
    ]
   },
   {
